--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "webapi",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
@@ -15,10 +14,21 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Lirijes/Fixxo-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Lirijes/Fixxo-backend/issues"
+  },
+  "homepage": "https://github.com/Lirijes/Fixxo-backend#readme",
+  "description": ""
 }
